<resources>
    <string name="app_name">Estudiantes Brandon</string>
    <string name="text_version">UdelP Estudiantes v0.1</string>
    <string name="text_home">Inicio</string>
    <string name="text_detail">Detalles</string>
    <string name="text_list">Lista</string>
    <string name="text_list_view">Ver Lista</string>
    <string name="text_form_view">Editar o Eliminar</string>
    <string name="text_exit_view">Salir</string>
    <string name="txt_my_form">Mi Formulario</string>
    <string name="hint_name">Escribe tu Nombre</string>
    <string name="hint_lastname">Escribe tus Apellidos</string>
    <string name="text_trunco">Trunco</string>
    <string name="text_Pasante">Pasante</string>
    <string name="text_Titulado">Titulado</string>
    <string name="text_image_description">Logo</string>
    <string name="text_unfinished_studies">Trunco</string>
    <string name="text_university_intern">Pasante</string>
    <string name="text_finished_studies">Titulado</string>
    <string name="text_leer">Leer</string>
    <string name="text_deporte">Deporte</string>
    <string name="text_viajar">Viajar</string>
    <string name="text_financial_assistance">¿Tiene asistencia financiera?</string>
    <string name="text_ok">Aceptar</string>
    <string name="text_eliminar">Eliminar</string>
    <string name="text_Edit">Editar o Eliminar</string>
    <string name="text_Guardar">Guardar</string>
    <string name="txt_Editar">Editar</string>

</resources>